Trying to fix valign again

--- a/files/styles.css
+++ b/files/styles.css
@@ -119,7 +119,7 @@ footer {
 }
 
 /* Media query for smaller screens */
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
     body {
         align-items: center;
         max-width: 90%;
